Hopefully fixed the issue of weird icon sizes on mobile

--- a/Socials/socials.css
+++ b/Socials/socials.css
@@ -29,8 +29,8 @@
 }
 
 .icon {
-    height: 50px;
-    width: 50px;
+    height: 5vh;
+    width: 7.5vw;
     align-self: center;
     display: inline-block;
     filter: drop-shadow(0 0 5px rgba(204, 0, 255, 1));
@@ -39,8 +39,8 @@
 }
 
 .icon-i {
-    height: 50px;
-    width: 50px;
+    height: 5vh;
+    width: 7.5vw;
     align-self: center;
     display: inline-block;
     filter: invert(1) drop-shadow(0 0 5px rgba(204, 0, 255, 1));
